syntax = "proto3";
package helloworld;
option go_package = "github.com/soslanco/go-protoc/examples/helloworld/helloworld";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message HelloWorldRequest {
  string name = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The name field."
      }];

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Hello World Request"
      description: "Hello World Request structure with user name"
      required: [ "name" ]
    },
    example: "{ \"name\": \"WebClient\" }"
  };
}

message HelloWorldResponse {
  string message = 1;
}

message HelloWorldPrefixRequest {
  string name = 1;
  Prefix prefix = 2;
}

message Prefix {
  string prefix = 1;
}

message HelloWorldPrefixResponse {
  string message = 1;
}

service HW {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse) {
    option (google.api.http) = {
      get: "/api/helloworld"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Hello endpoint"
      security: {}
    };
  }

  rpc HelloWorldPrefix(HelloWorldPrefixRequest)
      returns (HelloWorldPrefixResponse) {
    option (google.api.http) = {
      post: "/api/helloworld"
      body: "prefix"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Change greetings prefix"
      security: {}
    };
  }
}
